--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CareAssist Web - Health Guidance</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            animation: {
+              'bounce-short': 'bounce 1s ease-in-out 2',
+            }
+          }
+        }
+      }
+    </script>
 <script type="importmap">
 {
   "imports": {
@@ -17,7 +29,7 @@
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900 font-sans">
+<body class="bg-slate-50 dark:bg-slate-950 text-slate-900 dark:text-slate-100 font-sans transition-colors duration-300">
     <div id="root"></div>
 </body>
 </html>
