feat: Add navigation and first aid functionality
Introduce a new view state system for navigating between different sections of the application, including a dedicated First Aid section. Update `index.html` with comprehensive meta tags for better SEO and social sharing. Integrate `jspdf` for future PDF generation capabilities. Enhance the Gemini service by adding API key validation and removing the redundant `reasoning` field from the response schema. Refactor `App.tsx` to accommodate the new view state management and render the First Aid component when selected. Add initial data for various first aid scenarios.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CareAssist Web - Health Guidance</title>
+    <title>CareAssist Web - Smart Symptom Check & Health Guidance</title>
+    <meta name="description" content="CareAssist Web: A professional health tool by Prop Industries. Get evidence-based AI symptom checks, OTC suggestions, and offline first-aid guidance.">
+    <meta name="keywords" content="CareAssist Web, Symptom Check, Health AI, First Aid, OTC Medicine, Wellness, Prop Industries">
+    <meta name="author" content="Prop Industries">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://careassist-web.com/">
+    <meta property="og:title" content="CareAssist Web - Professional Health Assistance">
+    <meta property="og:description" content="Evidence-based health insights and AI-powered symptom checking. Accessible wellness guidance by Prop Industries.">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -24,7 +34,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
+    "react": "https://esm.sh/react@^19.2.4",
+    "jspdf": "https://esm.sh/jspdf@^2.5.1"
   }
 }
 </script>
